--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "buffer": "^6.0.3",
     "clsx": "^2.1.0",
     "framer-motion": "^10.18.0",
