--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@types/canvas-confetti": "^1.9.0",
     "buffer": "^6.0.3",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.0",
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
