--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@monaco-editor/react": "^4.7.0",
     "@types/canvas-confetti": "^1.9.0",
     "buffer": "^6.0.3",
@@ -18,6 +19,7 @@
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.300.0",
+    "openai": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
